Changed localhost to gipage url

--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,6 @@ fname:            Akshay
 lname:            P Guptha
 title:            Akshay Paniraja Guptha
 tagline:          'My portfolio'
-url:              http://localhost:4000
+url:              https://akshaypguptha.github.io
 baseurl:          /
 
