Changed baseurl to repo name

--- a/_config.yml
+++ b/_config.yml
@@ -33,5 +33,5 @@ lname:            P Guptha
 title:            Akshay Paniraja Guptha
 tagline:          'My portfolio'
 url:              https://akshaypguptha.github.io
-baseurl:          /
+baseurl:          /akshaypguptha.github.io/
 
